--- a/src/API/B2B-Subscription.API.csproj
+++ b/src/API/B2B-Subscription.API.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Infrastructure\B2B-Subscription.Infrastructure.csproj" />
+    <ProjectReference Include="..\Core\B2B-Subscription.Core.csproj" />
   </ItemGroup>
 
   <ItemGroup>
