--- a/src/API/B2B-Subscription.API.csproj
+++ b/src/API/B2B-Subscription.API.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.13" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="OpenIddict.AspNetCore" Version="6.1.0" />
     <PackageReference Include="OpenIddict.EntityFrameworkCore" Version="6.1.0" />
     <PackageReference Include="OpenIddict.Server" Version="6.1.0" />
