feat: add Stripe and create checkout API

--- a/src/API/B2B-Subscription.API.csproj
+++ b/src/API/B2B-Subscription.API.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="OpenIddict.EntityFrameworkCore" Version="6.1.0" />
     <PackageReference Include="OpenIddict.Server" Version="6.1.0" />
     <PackageReference Include="OpenIddict.Validation.AspNetCore" Version="6.1.0" />
+    <PackageReference Include="Stripe.net" Version="47.4.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.13" />
